# kasa-sdk-python

./: README.md  pyproject.toml
src/kasa/: Kasa.py
src/kasa_sdk_python/: Kasa.py  __init__.py
