[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kasa-sdk-python"
version = "0.0.1"
authors = [
    { name="Naphtali Gilead", email="naphtul@hotmail.com" },
]
description = "An implementation of Python SDK for Kasa (tp-link)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-kasa==0.5.1"
]

[project.urls]
"Homepage" = "https://github.com/naphtul/kasa-sdk-python"
"Bug Tracker" = "https://github.com/naphtul/kasa-sdk-python/issues"